fixed issues with text and icon alignemnt within button boundaries

--- a/client/components/remove-button/style.scss
+++ b/client/components/remove-button/style.scss
@@ -17,9 +17,11 @@
 	font-size: 14px;
 	line-height: 21px;
 	border-radius: 4px;
-	padding: 7px 14px 9px;
+	padding: 7px 14px 9px 10px;
 	-webkit-appearance: none;
 	appearance: none;
+
+	border: 1px $alert-red solid;
 
 	&:hover {
 		border-color: lighten( $gray, 10% );
@@ -49,7 +51,7 @@
 		display: none;
 	}
   &.is-compact {
-		padding: 7px;
+		padding: 7px 14px 9px 10px;
 		color: darken( $gray, 10% );
 		font-size: 11px;
 		line-height: 1;
@@ -60,7 +62,7 @@
 		}
 		.gridicon {
 			top: 4px;
-			margin-top: -2px;
+			margin-top: -4px;
 			width: 20px;
 			height: 16px;
 			text-align: right;
@@ -68,8 +70,8 @@
 	}
 	.gridicon {
 		position: relative;
-		top: 7px;
-		margin-top: -2px;
+		top: 6px;
+		margin-top: -6px;
 		width: 28px;
 		height: 24px;
 	}
